--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
   <main class="main">
 	  
-	 <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.53/build/spline-viewer.js"></script>
+<!-- Include Spline Viewer -->
+<script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.53/build/spline-viewer.js"></script>
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero">
+<section id="hero" class="hero">
 
-  <!-- Spline 3D background -->
+  <!-- Interactive Spline Background -->
   <spline-viewer
     url="https://prod.spline.design/2KV7nMIjGh9ZnaFG/scene.splinecode"
     background="transparent"
@@ -124,14 +124,10 @@
     <!-- Left text content -->
     <div class="hero-content" data-aos="fade-up">
       <h1>La Fattoria degli<br>Animali</h1>
-      <p>
-        Immerso nel verde della pineta di Castel Fusano, occupa un’area di 40.000mq.
-        Un parco dove i bambini si divertono e i grandi si appassionano.
-      </p>
+      <p>Immerso nel verde della pineta di Castel Fusano, occupa un’area di 40.000mq. Un parco dove i bambini si divertono e i grandi si appassionano.</p>
       <div class="hero-buttons">
         <a href="#book-a-table" class="btn-get-started">Prenota una Visita</a>
-        <a href="https://www.youtube.com/watch?v=TU-uoHiacN8&ab_channel=LaFattoriadegliAnimaliOstia"
-           class="glightbox btn-watch-video d-flex align-items-center">
+        <a href="https://www.youtube.com/watch?v=TU-uoHiacN8" class="glightbox btn-watch-video">
           <i class="bi bi-play-circle"></i><span>Guarda il Video</span>
         </a>
       </div>
@@ -145,73 +141,73 @@
   </div>
 </section>
 
+
 <!-- /Hero Section -->
 
-       <section id="about" class="about section">
+	 <section id="about" class="about section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Aperatura e Prezzi<br></h2>
-        <p><span>Esperienza da</span> <span class="description-title">non perdere</span></p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Apertura e Prezzi<br></h2>
+    <p><span>Esperienza da</span> <span class="description-title">non perdere</span></p>
+  </div><!-- End Section Title -->
 
-      <div class="container">
+  <div class="container">
 
-        <div class="row gy-4">
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="">
-            <div class="book-a-table">
-              <h3>Prenota una visita</h3>
-              <p>06 5657284 – 334 3752020 – 3393826268</p>
-            </div>
-          </div>
-          <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
-            <div class="content ps-0 ps-lg-5">
-            
-              <ul>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Dal 1° Marzo al 30 Novembre aperto tutti i giorni.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Dal 1° Dicembre al 28 Febbraio aperto solo festivi e prefestivi.</span></li>
-                <li><i class="bi bi-check-circle-fill"></i> <span>Apertura parco ore 10 chiusura varia secondo la stagione.</span></li>
-              </ul>
-              <h3>INGRESSO</h3>
-              <p>
-                Per la visita al parco non necessita la prenotazione.
-              </p>
-
-                <table class="price-table">
-    <tbody>
-      <tr>
-        <td class="category ingresso">Ingresso</td>
-        <td>
-          <p>Adulto / € 10,00</p>
-          <p>Bambini da 2 a 13 anni / € 8,00</p>
-          <p>Bambini sotto i 2 anni / Ingresso gratuito</p>
-        </td>
-      </tr>
-      <tr>
-        <td class="category gruppi">Gruppi</td>
-        <td>
-          <p>€ 7,00 / a persona</p>
-          <p>(minimo <span class="underline">20 persone</span>; per usufruire del prezzo ridotto il gruppo, al momento dell’ingresso, deve presentarsi al completo)</p>
-        </td>
-      </tr>
-      <tr>
-        <td class="category scolastici">Gruppi scolastici</td>
-        <td>
-          <p>€ 7,00 / ad alunno</p>
-          <p>Per i laboratori supplemento di € 3,00 / ad alunno</p>
-          <p>(ingresso gratuito a un insegnante ogni dieci alunni)</p>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-            </div>
-          </div>
+    <div class="row gy-4">
+      <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
+        <img src="assets/img/about.jpg" class="img-fluid mb-4" alt="">
+        <div class="book-a-table">
+          <h3>Prenota una visita</h3>
+          <p>06 5657284 – 334 3752020 – 3393826268</p>
         </div>
-
       </div>
+      <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
+        <div class="content ps-0 ps-lg-5">
 
-    </section><!-- /About Section -->
+          <ul>
+            <li><i class="bi bi-check-circle-fill"></i> <span>Dal 1° Marzo al 30 Novembre aperto tutti i giorni.</span></li>
+            <li><i class="bi bi-check-circle-fill"></i> <span>Dal 1° Dicembre al 28 Febbraio aperto solo festivi e prefestivi.</span></li>
+            <li><i class="bi bi-check-circle-fill"></i> <span>Apertura parco ore 10 chiusura varia secondo la stagione.</span></li>
+          </ul>
+
+          <h3>INGRESSO</h3>
+          <p>Per la visita al parco non necessita la prenotazione.</p>
+
+          <!-- Pricing Grid -->
+          <div class="price-grid">
+            <!-- Ingresso -->
+            <div class="category ingresso">Ingresso</div>
+            <div class="details">
+              <p><span class="price">€ 10,00</span> / Adulto</p>
+              <p>Bambini da 2 a 13 anni / <span class="price">€ 8,00</span></p>
+              <p>Bambini sotto i 2 anni / Ingresso gratuito</p>
+            </div>
+
+            <!-- Gruppi -->
+            <div class="category gruppi">Gruppi</div>
+            <div class="details">
+              <p><span class="price">€ 7,00</span> / a persona</p>
+              <p>(minimo <span class="underline">20 persone</span>; per usufruire del prezzo ridotto il gruppo, al momento dell’ingresso, deve presentarsi al completo)</p>
+            </div>
+
+            <!-- Gruppi scolastici -->
+            <div class="category scolastici">Gruppi scolastici</div>
+            <div class="details">
+              <p><span class="price">€ 7,00</span> / ad alunno</p>
+              <p>Per i laboratori supplemento di <span class="price">€ 3,00</span> / ad alunno</p>
+              <p>(Ingresso gratuito a un insegnante ogni dieci alunni)</p>
+            </div>
+          </div>
+          <!-- End Pricing Grid -->
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</section><!-- /About Section -->
 
 
     <!-- Why Us Section -->
